<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res/com.stockwidget">
    <ScrollView 
		android:id="@+id/ScrollView01" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">

	
	<TableLayout android:id="@+id/TableLayout01"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:stretchColumns="1">
			
		
		<TableRow android:layout_gravity="center">
			<com.google.ads.AdView android:id="@+id/adViewinconfig"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
				android:layout_span="4"
	            ads:adUnitId="a14deceefcb6c4b"
	            ads:adSize="BANNER"
				android:layout_alignParentBottom="true"/>
		</TableRow>
		
	    <TableRow android:layout_gravity="left">
	    <ImageView android:id="@+id/Title" 
	  		android:layout_width="wrap_content" 
	  		android:layout_height="wrap_content" 
	  		android:background="#00000000"
			android:layout_span="4"
			android:layout_marginTop="4dip"
			android:layout_marginBottom="4dip"
	        android:layout_alignParentRight="false" 
	        android:src="@drawable/title"/>
	    </TableRow>
		
		<View
	        android:layout_height="2dip"
	        android:background="#FF909090" />
	    <TableRow android:layout_gravity="left">
	    
			<TextView 
				android:text="@string/config_stock_code" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_span="3"
				android:padding="3dip"
				android:textStyle="bold"
        		style="@style/Text.StockTitle"></TextView>
			<ImageView android:id="@+id/help" 
		  		android:layout_width="wrap_content" 
		  		android:layout_height="wrap_content" 
		  		android:background="#00000000"
				android:layout_marginTop="1dip"
				android:layout_marginBottom="1dip"
		        android:layout_alignParentRight="false" 
		        android:src="@drawable/help"/>
	    </TableRow>
		    
		<TableRow android:layout_gravity="left">
		</TableRow>
		

			
		
		 
		<View
	        android:layout_height="2dip"
	        android:background="#FF909090" />
	    <TableRow android:layout_gravity="left">
			<TextView 
				android:text="@string/syncInterval" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:padding="3dip"
        		style="@style/Text.StockTitle"></TextView>
			
			<EditText 
				android:id="@+id/syncInterval"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:padding="3dip"
				style="@style/InputBackground"
				android:textColor="@android:color/black"
				android:numeric="integer" 
				android:singleLine="true" 
				android:text="@string/default_interval" 
				android:inputType="number"></EditText>
			
		</TableRow>
		
		<View
	        android:layout_height="2dip"
	        android:background="#FF909090" />
	    <TableRow android:layout_gravity="left">
			<TextView 
				android:text="@string/SyncStartTime" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:padding="3dip"
        		style="@style/Text.StockTitle"></TextView>
			
			<TextView 
				android:id="@+id/workTimeStart"
				android:text="-- : --" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:padding="3dip"
        		style="@style/InputBackground"
				android:textColor="@android:color/black"
				></TextView>
			
		</TableRow>
		
		<View
	        android:layout_height="2dip"
	        android:background="#FF909090" />
	    <TableRow android:layout_gravity="left">
			<TextView 
				android:text="@string/SyncEndTime" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:padding="3dip"
        		style="@style/Text.StockTitle"></TextView>
			
			<TextView 
				android:id="@+id/workTimeEnd"
				android:text="-- : --" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:padding="3dip"
				style="@style/InputBackground"
				android:textColor="@android:color/black"
        		></TextView>
			
		</TableRow>
		
		<!-- weekend date sync config -->
		<View
	        android:layout_height="2dip"
	        android:background="#FF909090" />
	    <TableRow android:layout_gravity="left">
			<CheckBox android:id="@+id/skipWeekend"
				android:text="@string/is_skip_weekend" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:layout_span="4"
				style="@style/Text.StockTitle"></CheckBox>
		</TableRow>
		
		<!-- single color config -->
		<View
	        android:layout_height="2dip"
	        android:background="#FF909090" />
	    <TableRow android:layout_gravity="left">
			<CheckBox android:id="@+id/singleColorMode"
				android:text="@string/is_single_color_mode" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:layout_span="4"
				style="@style/Text.StockTitle"></CheckBox>
		</TableRow>
		
		<View
	        android:layout_height="2dip"
	        android:background="#FF909090" />
	    <TableRow android:layout_gravity="center" 
	    	android:gravity="center">
			<Button android:id="@+id/save" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:text="@string/SAVE"
        		style="@style/ButtonBackground"></Button>
	    </TableRow>
	    

	</TableLayout>
    </ScrollView>
</LinearLayout>
